# templates

./: .gitignore  README.md
alternates/cdk/: makefile
alternates/cdk/etc/: environment.template
alternates/cdk/lib/: cdk-stack.ts
alternates/sls/: README.md
alternates/terraform/: .gitignore  README.md  makefile
alternates/terraform/iac/: main.tf  variables.tf
apigw/: .gitignore  README.md  makefile
apigw/etc/: environment.template
apigw/iac/: apigw.yaml  openapi.yaml
apigw/iac/cdk/: package-lock.json
apigw/iac/sam/: apigw.yaml  (+1 more)
bastion/: README.md  makefile
bastion/etc/: environment.template
bastion/iac/: ec2.yaml
cdk/: .gitignore  .npmignore  README.md  package-lock.json
cdk/lib/: cdk-stack.ts
ecs/: .gitignore  README.md  dockerfile  makefile  requirements.txt
ecs/etc/: artillery.yaml  environment.template
ecs/iac/: ecs.yaml  infrastructure.yaml
ecs/src/: fapi.py
eventbridge/: .gitignore  README.md
eventbridge/iac/: eventbridge.yaml
eventbridge/src/: emit.py
lambda/: .gitignore  README.md  makefile
lambda/custom_rust/: .gitignore  Cargo.toml  README.md  makefile
lambda/custom_rust/etc/: environment.template
lambda/custom_rust/iac/: lambda.yaml
lambda/custom_rust/src/: main.rs
lambda/iac/: lambda.yaml
lambda/python/: makefile
lambda/src/: fn.py
sf/: .gitignore  README.md  makefile
sf/etc/: environment.template
sf/iac/: asl.json  sf.yaml
sf/src/: fn.py
shared/: ddb.py  helper.py  lambda.py  s3.py  sfn.py  sqs.py
sls/: .gitignore  README.md  makefile  serverless.yaml
terraform/src/: fn.py
(+10 files in other folders)
