[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.57.1"
aws-sdk-config = "0.35.0"
aws-sdk-dynamodb = "0.35.0"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["sqs"] }
lambda_runtime = "0.8.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
